<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <youbao.shopping.ninetop.common.view.HeadView
        android:id="@+id/hv_head"
        android:layout_width="match_parent"
        style="@style/title_height" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/gray_light2" />

    <youbao.shopping.ninetop.common.view.MobileEditText
        android:id="@+id/met_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <youbao.shopping.ninetop.common.view.ClearAbleEditText
        android:id="@+id/cet_code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <youbao.shopping.ninetop.common.view.PwdEditText
        android:id="@+id/pet_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:id="@+id/cet_invitationCode"
        style="@style/text_font_size_s"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/transparent"
        android:hint="@string/login_put_invitationCode"
        android:maxLines="1"
        android:paddingEnd="0dp"
        android:paddingLeft="15dp"
        android:paddingRight="0dp"
        android:paddingStart="15dp"
        android:textColor="@color/text_black"
        android:textColorHint="@color/text_gray2"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_read_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/square_select_login"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_gray"
                style="@style/text_font_size_ss"
                android:text="@string/register_read_and_receive"/>

            <TextView
                android:id="@+id/tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                style="@style/text_font_size_ss"
                android:text="@string/register_service_contract"/>
        </LinearLayout>
        
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:enabled="false"
            android:text="@string/register_confirm_register"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/bg_border_gray_radius_select2"
            />
    </LinearLayout>

</LinearLayout>
