<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ninetop.common.view.HeadView
        android:id="@+id/hv_title"
        style="@style/title_height"
        android:layout_width="match_parent"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/confirm_pwd"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_pay_password_input_hint"
            style="@style/text_font_size_s"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="10dp"

            />
        <com.hykj.myviewlib.gridview.GridPasswordView
            android:id="@+id/pswView"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@color/gray_light9"
            app:gpvPasswordType="numberPassword"
            app:gpvTextColor="@color/text_black"
            app:gpvGridColor="@color/gray_light9"
            app:gpvLineColor="@color/gray_light"
            app:gpvCornerRadius="3dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginTop="15dp"
            android:background="@color/text_red"
            android:text="@string/setting_pay_password_sure"
            android:textColor="@color/white"
            style="@style/text_font_size_sl"
            android:id="@+id/button" />

    </LinearLayout>


</LinearLayout>