<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/close_gray" />


    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ub_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_number"
            style="@style/text_font_size_s"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:digits="@string/filter_code"
            android:hint="@string/login_edt_account_hint"
            android:inputType=""
            android:paddingEnd="0dp"
            android:paddingLeft="15dp"
            android:paddingRight="0dp"
            android:paddingStart="15dp"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_gray2"
            tools:ignore="TextFields" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/gray_light8" />

        <youbao.shopping.ninetop.common.view.PwdEditText
            android:id="@+id/pet_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="佳优保提倡：热爱祖国 孝顺父母 敬业诚信"
    android:textColor="#FF0000"
    android:textSize="16sp" />
</LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/bg_border_gray_radius_select2"
        android:text="@string/login_btn_login"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_fast_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_fast_register"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:gravity="end"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/gray_light8" />

            <TextView
                style="@style/text_font_size_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_other_login"
                android:textColor="@color/text_gray" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@color/gray_light8"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_we_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/icon_we_chat"
                android:contentDescription="@string/app_name"/>

            <ImageView
                android:id="@+id/iv_login_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@mipmap/qq_btn" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
