<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<youbao.shopping.ninetop.common.view.HeadView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/hv_head"
    />

    <LinearLayout
        android:id="@+id/ll_remind"
        android:layout_width="match_parent"
        android:layout_height="49dip"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        >
        <ImageView
            android:layout_width="18dip"
            android:layout_height="18dip"
            android:src="@mipmap/remind"
            android:layout_marginLeft="15dip"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/app_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_remind"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/category_normal"
            android:text="@string/refund_wait_seller_pay"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <include

            layout="@layout/include_return_money_over"/>
        <include

            layout="@layout/include_after_scale_logistac"
            />

<include
    layout="@layout/include_after_scale_foot"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_button"
        android:layout_width="match_parent"
        android:layout_height="51dip"
        android:background="@color/white"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@color/line"
            android:layout_alignParentTop="true"
            />
        <Button
            android:id="@+id/bt_revoke"
            android:layout_width="80dip"
            android:layout_height="30dip"
            android:background="@drawable/shape_button_red"
            android:text="@string/refound_withdraw_the_claim"
            android:textSize="12sp"
            android:textColor="@color/e4524b"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:layout_marginEnd="15dp"/>
        <Button
            android:id="@+id/bt_logistics_message"
            android:layout_toLeftOf="@id/bt_revoke"
            android:layout_toStartOf="@+id/bt_revoke"
            android:layout_width="100dip"
            android:layout_height="30dip"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_button"
            android:text="@string/refound_input_logistics_info"
            android:textSize="12sp"
            android:textColor="@color/gray_light3"
            android:layout_marginRight="10dip"
            android:layout_marginEnd="10dp"
            />

    </RelativeLayout>


</LinearLayout>